force-app/main/default/objects/LeanData__LD_Search__c/fields/LeanData__Match_100__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Match_100__c</fullName>
    <label>Match 100</label>
    <length>3072</length>
    <type>LongTextArea</type>
</CustomField>