force-app/main/default/objects/LeanData__LD_Search__c/fields/LeanData__Tokens_2__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Tokens_2__c</fullName>
    <externalId>true</externalId>
    <label>Tokens 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>